fix footer text align

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ main.card {
   right: 0;
   padding-bottom: 1rem;
   text-align: center;
+  margin: auto;
 }
 
 .attribution a {
